# contract-template-manager

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.railway  README.md  docker-compose.yml  pyproject.toml  railway_start.sh  start.bat  start.sh
app/: config.py  main.py
app/api/: deps.py  diff.py  health.py  router.py  shutdown.py  templates.py  users.py  versions.py  workflow.py
app/core/: exceptions.py
app/models/: __init__.py  base.py  template.py  template_version.py  user.py  workflow_transition.py
app/schemas/: diff.py  template.py  template_version.py  user.py  workflow.py
app/services/: diff_service.py  file_validator.py  git_service.py  stale_service.py  template_service.py  version_service.py  workflow_service.py
ctm_app/: main.py
ctm_app/api/: deps.py  diff.py  health.py  router.py  templates.py  users.py  versions.py  workflow.py
ctm_app/core/: workflow_states.py
ctm_app/models/: __init__.py  base.py  template.py  template_version.py  user.py  workflow_transition.py
ctm_app/schemas/: template.py  user.py  workflow.py
ctm_app/services/: file_validator.py  git_service.py  stale_service.py  template_service.py  version_service.py  workflow_service.py
ctm_frontend/: app.py
ctm_frontend/pages/: stale_alerts.py  template_registry.py  upload_template.py
data/sample/: consulting_agreement_v1.docx  nda_template_v1.docx  nda_template_v2.docx  seed_data.json  software_license_v1.docx
frontend/: api_client.py  app.py
scripts/: create_sample_docx.py  seed_sample_data.py
tests/: conftest.py
(+14 files in other folders)
